// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. comment lead and cartoon - small 1`] = `
<View>
  <Text>
    lead-1
  </Text>
  <View
    style={
      Object {
        "borderBottomWidth": 1,
        "borderColor": "#DBDBDB",
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <Text>
    cartoon-1
  </Text>
</View>
`;

exports[`2. comment lead and cartoon - medium 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 20,
      "paddingVertical": 5,
    }
  }
>
  <View
    style={
      Object {
        "width": "33.3%",
      }
    }
  >
    <Text>
      lead-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "66.7%",
      }
    }
  >
    <Text>
      cartoon-1
    </Text>
  </View>
</View>
`;

exports[`3. comment lead and cartoon - wide 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 10,
      "paddingVertical": 5,
    }
  }
>
  <View
    style={
      Object {
        "width": "33.3%",
      }
    }
  >
    <Text>
      lead-1
    </Text>
  </View>
  <View
    style={
      Object {
        "borderColor": "#DBDBDB",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "66.7%",
      }
    }
  >
    <Text>
      cartoon-1
    </Text>
  </View>
</View>
`;
